--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
