--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-native-webview": "^13.16.0",
     "react-router-dom": "^7.9.4",
     "reactflow": "^11.11.4",
     "recharts": "^3.3.0"
