--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.546.0",
     "nanoid": "^5.1.6",
     "react": "^19.1.1",
