--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
     "nanoid": "^5.1.6",
     "react": "^19.1.1",
